--- a/index.html
+++ b/index.html
@@ -20,15 +20,83 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script type="text/babel">
       class Team extends React.Component {
-        render() {
-          return <div className="Team">Team</div>;
+        constructor(props) {
+          super(props);
+          this.state = {
+            shots: 0,
+            score: 0,
+          };
+
+          this.shotSound = new Audio("./assets/audio/shotsound.mp3");
+          this.scoreSound = new Audio("./assets/audio/scoresound.mp3");
         }
+
+        shotHandler = () => {
+          let score = this.state.score;
+          this.shotSound.play();
+          if (Math.random() > 0.5) {
+            score += 1;
+            setTimeout(() => {
+              this.scoreSound.play();
+            }, 220);
+          }
+          this.setState((state, props) => ({
+            shots: state.shots + 1,
+            score,
+          }));
+        };
+        render() {
+          let shotPercentageDiv;
+          if (this.state.shots) {
+            const shotPercentage = Math.round(
+              (this.state.score / this.state.shots) * 100
+            );
+            shotPercentageDiv = (
+              <div>
+                <strong>Shooting %: {shotPercentage}</strong>
+              </div>
+            );
+          }
+
+          return (
+            <div className="Team">
+              <h2>{this.props.name}</h2>
+              <div className="identity">
+                <img src={this.props.logo} alt={this.props.name} />
+              </div>
+              <div>
+                <strong>Shots:</strong> {this.state.shots}
+              </div>
+              <div>
+                <strong>Score:</strong> {this.state.score}
+              </div>
+              {shotPercentageDiv}
+              <button onClick={this.shotHandler}>Shoot!</button>
+            </div>
+          );
+        }
+      }
+      function Game(props) {
+        return (
+          <div className="Game">
+            <h1>Welcome to {props.venue}</h1>
+            <div className="stats">
+              <Team name="Hotshots" logo="./assets/logo1.png" />
+              <div className="versus">
+                <h1>VS</h1>
+              </div>
+              <Team name="Not The Hotshots" logo="./assets/logo2.png" />
+            </div>
+            ;
+          </div>
+        );
       }
 
       function App(props) {
         return (
           <div className="App">
-            <Team name="Russiaville Raccoons" logo="time" />
+            <Game venue="Indianapolis" />
+            <Game venue="Jamestown" />
           </div>
         );
       }
